# Momentum

./: .gitignore  README.md  config.yaml  config_loader.py  logger.py  main.py  optimizer.py  pipeline.py  pyproject.toml  research_momentum.py
data/: adjclose.csv  pnl.csv  position.csv  signal.csv
momentum/: backtest.py  data.py  portfolio.py  position.py  signal.py
notebook/: notebook.ipynb  quick_book.ipynb
tests/: test_signal.py
